# ros2_3dslam_ws

./: CLAUDE.md
docs/issues_and_fixes/: 2026-04-26-nav2-gpu-fullstack-and-tf-fix.md
docs/superpowers/plans/: 2026-03-28-amr-motion-control.md  2026-03-29-sil-simulation-integration.md  2026-04-04-slam-mapper.md  2026-04-17-mapper-stub-completion.md
docs/superpowers/specs/: 2026-03-29-stanley-path-follower-design.md  2026-04-04-slam-mapper-design.md
scripts/: kill_all_ros2.sh
src/ACS/Waypoint-System/: README.md
src/ACS/Waypoint-System/acs_waypoint_gui/: acs_run_test.sh  run_integration_tests.sh
src/ACS/Waypoint-System/acs_waypoint_gui/acs_waypoint_gui/: acs_gui_node.py
src/ACS/Waypoint-System/acs_waypoint_gui/config/: README_scenarios.md  job_test_figure_l.txt  job_test_large_loop.txt  job_test_multistop.txt  job_test_precision.txt
src/ACS/Waypoint-System/waypoint_manager/src/: action_chainer.cpp
src/Common/launch_utils/: package.xml  setup.py
src/Common/launch_utils/launch_utils/: __init__.py  gpu_offload.py
src/Control/AMR-Motion-Control/amr_interfaces/: CMakeLists.txt  package.xml
src/Control/AMR-Motion-Control/amr_interfaces/action/: AMRMotionPurePursuit.action  AMRMotionStanley.action  AMRMotionYawControl.action
src/Control/AMR-Motion-Control/amr_interfaces/srv/: UpdatePurePursuitPath.srv  UpdateStanleyPath.srv
src/Control/AMR-Motion-Control/amr_motion_control_2wd/: CMakeLists.txt  package.xml
src/Control/AMR-Motion-Control/amr_motion_control_2wd/config/: motion_params_gazebo.yaml  motion_params_gazebo_no_slam.yaml
src/Control/AMR-Motion-Control/amr_motion_control_2wd/include/amr_motion_control_2wd/: motion_common.hpp  pure_pursuit_action_server.hpp  stanley_action_server.hpp  yaw_control_action_server.hpp
src/Control/AMR-Motion-Control/amr_motion_control_2wd/src/: main.cpp  pure_pursuit_action_server.cpp  stanley_action_server.cpp  translate_action_server.cpp  yaw_control_action_server.cpp
src/Control/AMR-Motion-Control/amr_motion_control_simulation/: CMakeLists.txt  package.xml
src/Control/AMR-Motion-Control/amr_motion_control_simulation/docs/: run_commands.md
src/Control/AMR-Motion-Control/amr_motion_control_simulation/include/amr_motion_control_simulation/: path_controller_2wd.hpp  sil_predictor.hpp  sim_types.hpp  trapezoidal_profile.hpp
src/Control/AMR-Motion-Control/amr_motion_control_simulation/src/: bindings.cpp  path_controller_2wd.cpp  sil_predictor.cpp  trapezoidal_profile.cpp
src/Control/AMR-Motion-Control/amr_motion_control_simulation/test/: test_path_controller_2wd.cpp  test_sil_predictor.cpp  test_trapezoidal_profile.cpp
src/Control/AMR-Motion-Control/amr_motion_test_ui/amr_motion_test_ui/: gui_node.py  ros_bridge.py
src/Control/AMR-Motion-Control/docs/: FLOW.md  amr_motion_control_run_commands.md  stanley_path_follower_design.md  yaw_control_design.md
src/Gazebo/: CMakeLists.txt
src/Gazebo/docs/: Gazebo_code_updates.md  Gazebo_run_commands.md  WALL_DETECTION_FLOWCHART.md  odom_rqt_fix.md
src/Gazebo/launch/: gazebo.launch.py  gazebo_no_odom.launch.py
src/Gazebo/rviz2/: gazebo.rviz
src/Gazebo/scripts/: find_longest_wall.py  find_walls_hough.py  odom_to_tf.py  sil_hough_random_test.py  sil_hough_spawn_test.py  sil_wall_angle_test.py  test_wall_angle_detection.py  wall_detection_visualizer.py
src/Gazebo/urdf/: pioneer2dx.urdf
src/Mapper/mapper/: CMakeLists.txt  package.xml
src/Mapper/mapper/docs/: MAPPER_SYSTEM_FLOWCHART.md
src/Mapper/mapper/include/mapper/: map_alignment_checker_node.hpp  mapper_orchestrator_node.hpp  wall_aligner_node.hpp
src/Mapper/mapper/launch/: mapper.launch.py  mapper_gazebo.launch.py
src/Mapper/mapper/src/: exploration_planner_node.cpp  main_exploration_planner.cpp  main_map_alignment_checker.cpp  map_alignment_checker_node.cpp  mapper_orchestrator_node.cpp  wall_aligner_node.cpp
src/Mapper/mapper/test/: TEST_SCENARIOS.md  test_exploration_planner.cpp  test_integration_gazebo.py  test_map_alignment_checker.cpp  test_orchestrator_states.cpp
src/Mapper/mapper_interfaces/: CMakeLists.txt  package.xml
src/Mapper/mapper_interfaces/action/: ExploreUnknown.action  MapAlignmentCheck.action  WallAlign.action
src/Mapper/mapper_interfaces/msg/: LongestWall.msg  MapperStatus.msg
src/Mapper/mapper_interfaces/srv/: MapperCommand.srv  SlamControl.srv
src/Mapper/mapper_ui/: package.xml  setup.py
src/Mapper/mapper_ui/mapper_ui/: mapper_ui_node.py  ros_bridge.py
src/Mapper/mapper_ui/ui/: mapper_main.ui
src/Mapper/wall_detector/: CMakeLists.txt  package.xml
src/Mapper/wall_detector/include/wall_detector/: wall_detector_node.hpp
src/Mapper/wall_detector/launch/: wall_detector.launch.py
src/Mapper/wall_detector/scripts/: sil_wall_align_random_test.py
src/Mapper/wall_detector/src/: main_wall_detector.cpp  wall_detector_node.cpp
src/Mapper/wall_detector/test/: test_wall_detector.cpp
src/Planner/Nav2/nav2_smac_hybrid/: CMakeLists.txt  package.xml
src/Planner/Nav2/nav2_smac_hybrid/config/: smac_hybrid_localization_params.yaml
src/Planner/Nav2/nav2_smac_hybrid/launch/: planner_localization_test.launch.py  planner_only.launch.py  smac_hybrid_planner.launch.py
src/Planner/Nav2/nav2_smac_hybrid/rviz/: nav2_smac_hybrid.rviz
src/Planner/ODD/Global/odd_global_planner/: CMakeLists.txt  package.xml
src/Planner/ODD/Global/odd_global_planner/launch/: global_planner.launch.py
src/Planner/ODD/Global/odd_global_planner/rviz2/: global_planner.rviz
src/Planner/ODD/Global/odd_global_planner/src/: global_planner_node.cpp
src/SLAM/2D_SLAM/Cartographer/docs/: Cartographer_run_commands.md
src/SLAM/2D_SLAM/SLAMBOX/: CMakeLists.txt
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/launch/localization/: run_localization.launch.py  run_localization_gazebo.launch.py
src/SLAM/3D_SLAM/LIO-SAM/livox_lio_sam/launch/slam/: run_slam.launch.py  (+1 more)
src/SLAM/3D_SLAM/rtab_map_3d/rviz2/: rtabmap_localization.rviz
src/SLAM/SLAM_Manager/2D/slam_manager_2d/: slam_manager_2d_node.py
waypoints/: job_test_drive_modes.txt  job_test_gazebo.txt  job_test_straight.txt  job_test_yawctrl.txt
