<?xml version="1.0"?>
<package format="3">
  <name>launch_utils</name>
  <version>0.1.0</version>
  <description>Common ROS2 launch helpers (GPU PRIME offload auto-detect, etc.)</description>
  <maintainer email="kukwonko@gmail.com">amap</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
